changed the tooltip of the slider from nowrap to normal to correct mobile responsiveness

--- a/public/css/bootstrap-slider.css
+++ b/public/css/bootstrap-slider.css
@@ -135,7 +135,7 @@
   margin-top: -36px;
 }
 .slider .tooltip-inner {
-  white-space: nowrap;
+  white-space: normal;
   max-width: none;
 }
 .slider .hide {
